--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,9 +4,11 @@
 @import "{{ site.theme }}";
 
 .row{
+    width: fit-content;
     color:red;
     border: 2px solid greenyellow;
 }
 .col{
+    width: fit-content;
     border: 1px solid violet;
 }
