--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,14 +8,13 @@
     align-content: center;
 }
 
-.row{
-    align-items: center;
+.row_1{
     width: 100%;
     color:red;
     border: 2px solid greenyellow;
 }
-.col{
-    align-items: center;
+.col_1_1{
+    text-align: center;
     width: 100%;
     color: burlywood;
     border: 1px solid violet;
