--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,5 +17,29 @@
     text-align: center;
     width: 100%;
     color: burlywood;
-    border: 1px solid violet;
+    border: 3px solid violet;
+}
+
+.row_hw1_1{
+    width: 100%;
+    color:red;
+    border: 2px solid greenyellow;
+}
+.col_hw1_1_1{
+    text-align: center;
+    width: 100%;
+    color: burlywood;
+    border: 3px solid violet;
+}
+
+.row_hw1_2{
+    width: 100%;
+    color:red;
+    border: 2px solid greenyellow;
+}
+.col_hw1_2_1{
+    text-align: center;
+    width: 100%;
+    color: burlywood;
+    border: 3px solid violet;
 }
