--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -26,15 +26,15 @@
     padding-bottom: 0.5vw;
     font-weight: bold;
 }
-.r1c1HW{
+.r1c1HW1{
     grid-area: bb;
     padding-bottom: 1.5vw;
 }
-.r1c2HW{
+.r1c2HW1{
     grid-area: cc;
     padding-bottom: 1.5vw;
 }
-.r1c2HW{
+.r2c2HW1{
     grid-area: dd;
     padding-bottom: 1.5vw;
 }
