--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,11 +15,12 @@
 .gridHomeworks > div{
     align-self: center;
     text-align: center;
+    color: white;
 }
 
 .homework{
     grid-area: aa;
-    color: #162d42;
+    color: greenyellow;
     font-size: 4vw;
     text-align: center;
     font-family: 'Maven Pro', sans-serif;
