--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,14 +7,15 @@
     display: grid;
     grid-template:
       'aa aa aa'
-      'bb cc cc'
-      'bb dd dd' /0.33fr 1.335fr 1.335fr;
+      'bb cc ee'
+      'bb dd ff' /0.33fr 1.335fr 1.335fr;
     width: 100%;
 }
 
 .gridHomeworks > div{
     align-self: center;
     text-align: center;
+    min-width: 100px;
 }
 
 .homework{
@@ -39,6 +40,17 @@
 }
 .r2c2HW1{
     grid-area: dd;
+    padding-bottom: 1.5vw;
+    color: white;
+}
+
+.r1c3HW1{
+    grid-area: ee;
+    padding-bottom: 1.5vw;
+    color: white;
+}
+.r2c3HW1{
+    grid-area: ff;
     padding-bottom: 1.5vw;
     color: white;
 }
