--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,8 +16,9 @@
 .gridHomeworks > div{
     align-self: center;
     text-align: center;
-    min-width: 100px;
     border: 3px solid yellowgreen;
+    width: 100%;
+    height: 100%;
 }
 
 .homework{
@@ -26,47 +27,39 @@
     font-size: 4vw;
     text-align: center;
     font-family: 'Maven Pro', sans-serif;
-    padding-bottom: 0.5vw;
     font-weight: bold;
 }
 
 .r0c1HW1{
     grid-area: gg;
-    padding-bottom: 1.5vw;
     color: white;
     text-align: center;
 }
 .r0c2HW1{
     grid-area: hh;
-    padding-bottom: 1.5vw;
     color: white;
     text-align: center;
 }
 
 .r1c1HW1{
     grid-area: bb;
-    padding-bottom: 1.5vw;
     color: white;
     text-align: center;
 }
 .r1c2HW1{
     grid-area: cc;
-    padding-bottom: 1.5vw;
     color: white;
 }
 .r1c3HW1{
     grid-area: ee;
-    padding-bottom: 1.5vw;
     color: white;
 }
 
 .r2c2HW1{
     grid-area: dd;
-    padding-bottom: 1.5vw;
     color: white;
 }
 .r2c3HW1{
     grid-area: ff;
-    padding-bottom: 1.5vw;
     color: white;
 }
