--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -68,6 +68,11 @@
     color: white;
 }
 
+.HW2{
+    grid-area: ii;
+    color: white;
+}
+
 .gridHomework2{
     display: grid;
     grid-template:
