--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,7 +9,7 @@
       'aa aa aa'
       'bb gg hh'
       'bb cc ee'
-      'bb dd ff'/0.33fr 1.335fr 1.335fr;
+      'bb dd ff'/110px 180px 1.335fr;
     width: 100%;
 }
 
@@ -75,7 +75,7 @@
       'a g h i'
       'a g j k'
       'a l m n'
-      'a l p q'/0.33fr 1.223fr 1.223fr 1.223fr;
+      'a l p q'/110px 180px 1.223fr 1.223fr;
     width: 100%;
 }
 
