--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -292,7 +292,7 @@
     grid-template:
       'ab bc cd'
       'ab gh hi'
-      'ab lm mn'/110px 180px 110px 1fr;
+      'ab lm mn'/110px 180px 1fr;
     width: 100%;
 }
 
