--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -336,7 +336,7 @@
     color: white;
 }
 
-////////////////////////////////////////////77
+////////////////////////////////////////////
 
 .gridHomework6{
     display: grid;
@@ -384,5 +384,48 @@
 }
 .r4c2HW6{
     grid-area: mnn;
+    color: white;
+}
+
+
+////////////////////////////////////////////
+
+.gridHomework7{
+    display: grid;
+    grid-template:
+    'abbb ghhh hiii'
+    'abbb lmmm mnnn'/110px 180px 1fr;
+    width: 100%;
+}
+
+.gridHomework7 > div{
+    align-self: center;
+    text-align: center;
+    border: 3px solid yellowgreen;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    align-content: center;
+    align-items: center;
+}
+
+.r1HW7{
+    grid-area: abbb;
+    color: white;
+}
+.r3c1HW7{
+    grid-area: ghhh;
+    color: white;
+}
+.r3c2HW7{
+    grid-area: hiii;
+    color: white;
+}
+.r4c1HW7{
+    grid-area: lmmm;
+    color: white;
+}
+.r4c2HW7{
+    grid-area: mnnn;
     color: white;
 }
